--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Netflix Clone</title>
 
     <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="style/responsive.css">
+
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
 </head>
 <body>
     <header>
@@ -40,9 +44,46 @@
                 </div>
             </div>
         </div>
-        
     </main>
 
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="assets/mini1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini4.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini5.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini6.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini7.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini8.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini9.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="assets/mini10.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/ed1e004c23.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/setup.js"></script>
 </body>
 </html>
