--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">NETFLIX</h2>
+            <a href="https://fontmeme.com/netflix-font/" class="logo"><img src="https://fontmeme.com/permalink/210317/82b5bfd122ca42efc9bcb70350d447f8.png" alt="netflix-font" border="0"></a>
             <nav>
                 <a href="#">Início</a>
                 <a href="#">Séries</a>
